Fixing "Added" button visibility

--- a/src/components/PlayerCard.css
+++ b/src/components/PlayerCard.css
@@ -55,7 +55,7 @@
 /* ✔ ADDED */
 .added-tag {
   position: absolute;
-  top: -10px;
+  top: 10px;
   left: 50%;
   transform: translateX(-50%);
   background-color: #00c853;
